Fix styling on mobile

--- a/sites/all/themes/humanitarianresponse/assets/sass/screen.scss
+++ b/sites/all/themes/humanitarianresponse/assets/sass/screen.scss
@@ -36,3 +36,58 @@
 @import "partials/structure";
 @import "partials/user";
 @import "partials/view";
+
+// Fix responsive
+
+.container.header #navigation ul.menu {
+  position: relative;
+  top: auto;
+  padding-left: 10px;
+}
+
+@media screen and (max-width: 768px) {
+  .container.header #navigation ul.menu {
+    background: white;
+    z-index: 3;
+    margin-top: 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container.header #navigation {
+    left: auto;
+    bottom: auto;
+    position: relative;
+    line-height: normal;
+    height: auto;
+    width: auto;
+  }
+}
+
+.pull-right {
+  float: none;
+}
+
+@media screen and (max-width: 768px) {
+  .pull-right {
+    float: right;
+  }
+}
+
+.container.header .region-branding {
+  position: relative;
+  top: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .container.header .region-branding {
+    position: absolute;
+    top: 0;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    width: auto;
+  }
+}
